src/compiletest/lcell-03.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'id` due to conflicting requirements
 --> $DIR/lcell-03.rs:9:37
  |
9 |             let c1 = Rc::new(owner1.cell(100u32));
  |                                     ^^^^
  |
note: first, the lifetime cannot outlive the anonymous lifetime #2 defined on the body at 8:27...
 --> $DIR/lcell-03.rs:8:27
  |
8 |           LCellOwner::scope(|mut owner2| {
  |  ___________________________^
9 | |             let c1 = Rc::new(owner1.cell(100u32));
10| |             let c1mutref2 = owner2.rw(&c1);    // Compile error
11| |             println!("{}", *c1mutref2);
12| |         });
  | |_________^
  = note: ...so that the types are compatible:
          expected &mut qcell::LCellOwner<'_>
             found &mut qcell::LCellOwner<'_>
note: but, the lifetime must be valid for the anonymous lifetime #2 defined on the body at 7:23...
 --> $DIR/lcell-03.rs:7:23
  |
7 |       LCellOwner::scope(|mut owner1| {
  |  _______________________^
8 | |         LCellOwner::scope(|mut owner2| {
9 | |             let c1 = Rc::new(owner1.cell(100u32));
10| |             let c1mutref2 = owner2.rw(&c1);    // Compile error
11| |             println!("{}", *c1mutref2);
12| |         });
13| |     });
  | |_____^
  = note: ...so that the types are compatible:
          expected &qcell::LCellOwner<'_>
             found &qcell::LCellOwner<'_>
